[gd_scene load_steps=11 format=2]

[ext_resource path="res://Examples/Paddle/Components/Game/Game.gd" type="Script" id=1]
[ext_resource path="res://Examples/Paddle/Assets/Themes/Theme.tres" type="Theme" id=2]
[ext_resource path="res://Examples/Paddle/Assets/Themes/Heading.tres" type="DynamicFont" id=3]
[ext_resource path="res://Examples/Paddle/Assets/Themes/Title.tres" type="DynamicFont" id=4]
[ext_resource path="res://Examples/Paddle/Components/Game/Player.gd" type="Script" id=5]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 6, 40 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 2, 260 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 2, 260 )

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 524, 2 )

[sub_resource type="RectangleShape2D" id=5]
extents = Vector2( 524, 2 )

[node name="Game" type="Node"]
script = ExtResource( 1 )

[node name="HUD" type="Control" parent="."]
margin_right = 1024.0
margin_bottom = 600.0
theme = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Background" type="ColorRect" parent="HUD"]
margin_right = 1024.0
margin_bottom = 600.0
color = Color( 0.12549, 0.12549, 0.156863, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Border" type="ColorRect" parent="HUD"]
margin_top = 76.0
margin_right = 1024.0
margin_bottom = 80.0
rect_pivot_offset = Vector2( 181, 43 )
color = Color( 0.752941, 0.752941, 0.784314, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Net" type="ColorRect" parent="HUD"]
margin_left = 510.0
margin_top = 80.0
margin_right = 514.0
margin_bottom = 600.0
rect_pivot_offset = Vector2( 181, 43 )
color = Color( 0.752941, 0.752941, 0.784314, 0.25098 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Title" type="Label" parent="HUD"]
margin_left = 471.0
margin_top = 40.0
margin_right = 635.0
margin_bottom = 112.0
rect_scale = Vector2( 0.5, 0.5 )
custom_fonts/font = ExtResource( 4 )
text = "PADDLE"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PlayerOneLabel" type="Label" parent="HUD"]
margin_left = 16.0
margin_top = 16.0
margin_right = 272.0
margin_bottom = 40.0
text = "Player 1"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PlayerOneScore" type="Label" parent="HUD"]
margin_left = 16.0
margin_top = 40.0
margin_right = 144.0
margin_bottom = 72.0
custom_fonts/font = ExtResource( 3 )
text = "0"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PlayerTwoLabel" type="Label" parent="HUD"]
margin_left = 736.0
margin_top = 16.0
margin_right = 992.0
margin_bottom = 40.0
text = "Player 2"
align = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PlayerTwoScore" type="Label" parent="HUD"]
margin_left = 864.0
margin_top = 40.0
margin_right = 992.0
margin_bottom = 72.0
custom_fonts/font = ExtResource( 3 )
text = "0"
align = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PlayerOne" type="KinematicBody2D" parent="."]
position = Vector2( 16, 300 )
script = ExtResource( 5 )

[node name="Fill" type="ColorRect" parent="PlayerOne"]
margin_right = 12.0
margin_bottom = 80.0
color = Color( 0.941176, 0.941176, 0.941176, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Body" type="CollisionShape2D" parent="PlayerOne"]
position = Vector2( 6, 40 )
shape = SubResource( 1 )

[node name="PlayerTwo" type="KinematicBody2D" parent="."]
position = Vector2( 996, 300 )
script = ExtResource( 5 )

[node name="Fill" type="ColorRect" parent="PlayerTwo"]
margin_right = 12.0
margin_bottom = 80.0
color = Color( 0.941176, 0.941176, 0.941176, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Body" type="CollisionShape2D" parent="PlayerTwo"]
position = Vector2( 6, 40 )
shape = SubResource( 1 )

[node name="PlayerOneGoal" type="StaticBody2D" parent="."]

[node name="CollisionShape" type="CollisionShape2D" parent="PlayerOneGoal"]
position = Vector2( -10, 340 )
shape = SubResource( 3 )

[node name="PlayerTwoGoal" type="StaticBody2D" parent="."]

[node name="CollisionShape" type="CollisionShape2D" parent="PlayerTwoGoal"]
position = Vector2( 1034, 340 )
shape = SubResource( 2 )

[node name="BoundaryTop" type="StaticBody2D" parent="."]

[node name="CollisionShape" type="CollisionShape2D" parent="BoundaryTop"]
position = Vector2( 512, 78 )
shape = SubResource( 4 )

[node name="BoundaryBottom" type="StaticBody2D" parent="."]

[node name="CollisionShape" type="CollisionShape2D" parent="BoundaryBottom"]
position = Vector2( 512, 602 )
shape = SubResource( 5 )
